fix(receipts): inline destructuring projection lets; TreeMap-canonicalize SymExpr.Record
Two proof-system defects surfaced by a new receipt-graph feature-coverage
audit (docs/receipt-graph-overhaul.md, Step-1 findings):

- Finding 1 (HIGH): destructuring match arms (`[Cons(h,t)] -> 1 + len(t)`)
  desugar to nested projection lets, which compileSymExpr encodes as an
  un-reduced App(Lam(name,body),value) wrapper. The drafter never inlined
  them, so the arm hoisted calls against the dangling binder (`len(t)` not
  `len(xs.tail)`) and left an opaque wrapper BoundAnalysis cannot see through
  -- breaking ALL ADT/structural recursion proofs (factorial worked only
  because its guard-only arms bind nothing). Fix: the drafter now beta-reduces
  administrative redexes and inlines projection lets (var/field-access/literal
  values -- duplication-safe; call-valued lets stay shared) at the IR level
  before hoisting. `len` now drafts `len(xs_0.tail) -> r_1` + `r_0 == 1 + r_1`
  and discharges both branches. Also fixes the cross-module path for free.

- Finding 4 (MEDIUM): SymExpr.Record used Map.copyOf, whose iteration order is
  salted/randomized per JVM run, making receipt renderings nondeterministic.
  Canonicalize members into a TreeMap (field-name keys are Comparable; record
  equality is order-independent regardless).

New tests: ReceiptGraphFeatureCoverageTest (locks the fixed behavior + baselines
on dispatch/brace/stream surfaces) and ReceiptGraphFeatureProbe (diagnostic
table). Full `pontif-runtime -am` reactor green.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>